*****************************************************************************************************
digiKam 5.6.0 - Release date: 2017-05-07

NEW FEATURES:
Database    : We activated database shrinking for MySQL as part of the maintenance since now we can test the affected tables for integrity.

BUGFIXES FROM BUGZILLA:

001 ==> 377432 : Crash on browsing images.
002 ==> 377565 - Problem importing Person tags which are also "normal" tags.
003 ==> 218297 - SETUP : Database location under control panel doesn't match when using database-directory command line option
004 ==> 377638 - Database directory ignoring hidden and unnecessarily in migration-dialogue
005 ==> 378098 - Update meta data from selected images (generated outside digikam) does not work anymore.
006 ==> 