@@ -37,49 +37,51 @@
 
 // Local includes
 
-#include "digikam_debug.h"
-#include "digikam_config.h"
-#include "digikam_globals.h"
-#include "dmessagebox.h"
 #include "albumhistory.h"
+#include "albumlabelstreeview.h"
 #include "applicationsettings.h"
-#include "metadatasynchronizer.h"
+#include "coredbsearchxml.h"
+#include "digikam_config.h"
+#include "digikam_debug.h"
+#include "digikam_globals.h"
 #include "digikamapp.h"
 #include "digikamimageview.h"
+#include "dmessagebox.h"
 #include "dzoombar.h"
+#include "dtrashitemmodel.h"
+#include "fileactionmngr.h"
+#include "fileactionprogress.h"
+#include "filtersidebarwidget.h"
+#include "filterstatusbar.h"
 #include "imagealbummodel.h"
 #include "imagedescedittab.h"
 #include "imagepreviewview.h"
 #include "imagepropertiessidebardb.h"
+#include "imagepropertiesversionstab.h"
 #include "imagethumbnailbar.h"
 #include "imageviewutilities.h"
-#include "filterstatusbar.h"
 #include "leftsidebarwidgets.h"
 #include "loadingcacheinterface.h"
-#include "metadatasettings.h"
-#include "newitemsfinder.h"
 #include "metadatahub.h"
-#include "fileactionmngr.h"
+#include "metadatasettings.h"
+#include "metadatasynchronizer.h"
+#include "newitemsfinder.h"
+#include "presentationmngr.h"
 #include "queuemgrwindow.h"
 #include "scancontroller.h"
 #include "setup.h"
 #include "sidebar.h"
 #include "slideshow.h"
 #include "slideshowbuilder.h"
-#include "presentationmngr.h"
 #include "statusprogressbar.h"
-#include "filtersidebarwidget.h"
-#include "tagmodificationhelper.h"
-#include "imagepropertiesversionstab.h"
-#include "tagscache.h"
-#include "coredbsearchxml.h"
-#include "fileactionprogress.h"
-#include "versionmanagersettings.h"
 #include "tableview.h"
+#include "tagmodificationhelper.h"
+#include "tagsactionmngr.h"
+#include "tagscache.h"
 #include "tagsmanager.h"
 #include "thumbsgenerator.h"
-#include "albumlabelstreeview.h"
-#include "tagsactionmngr.h"
+#include "trashview.h"
+#include "versionmanagersettings.h"
 
 #ifdef HAVE_MEDIAPLAYER
 #include "mediaplayerview.h"
